@@ -1,17 +1,17 @@
 package github.dqw4w9wgxcq.botapi.injector;
 
-import github.dqw4w9wgxcq.botapi.injector.injectors.ProxySocket;
+import github.dqw4w9wgxcq.botapi.injector.injectors.SocketInjector;
 import lombok.extern.slf4j.Slf4j;
 import org.objectweb.asm.ClassReader;
-import org.objectweb.asm.ClassWriter;
 import org.objectweb.asm.tree.ClassNode;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Slf4j
 public class Inject {
-    public static List<Injector> injectors = List.of(
-            new ProxySocket("fp")
+    public static List<Injector> injectors = Arrays.asList(
+            new SocketInjector("fp")
     );
 
     //gets called by injected guava com.google.common.io.ByteStreams
@@ -22,14 +22,16 @@ public class Inject {
 
         ClassReader cr = new ClassReader(bytes);
         ClassNode cn = new ClassNode();
-        cr.accept(cn, 0);
-        String name = cn.name.replace("/", ".");
-
-        for (Injector injector : injectors) {
-            injector.inject(name, cn);
+        cr.accept(cn, ClassReader.SKIP_FRAMES);
+        String name = cn.name;
+        if (!name.equals("fp")) {
+            return bytes;
         }
 
-        ClassWriter cw = new ClassWriter(cr, ClassWriter.COMPUTE_MAXS | ClassWriter.COMPUTE_FRAMES);
-        return cw.toByteArray();
+        for (Injector injector : injectors) {
+            bytes = injector.inject(name, bytes);
+        }
+
+        return bytes;
     }
 }
